# dnYara

./: .gitignore  .gitmodules  INTEROP.md  README.md  build_yara.bat  dnYara.sln
.github/workflows/: build.yml  codeql-analysis.yml  dotnetcore.yml
Libraries/dnYara.Interop/: dnYara.Interop.csproj
Libraries/dnYara.Interop/Interops/: Constants.cs  Delegates.cs  Methods.cs  ObjRefHelper.cs
Libraries/dnYara.Interop/Interops/Types/: Types.cs  YR_MATCH.cs  YR_MATCHES.cs  YR_META.cs  YR_RULE.cs  YR_RULES.cs  YR_SCAN_CONTEXT.cs  YR_STOPWATCH.cs  YR_STRING.cs
Libraries/dnYara.NativePack/: dnYara.NativePack.csproj  libyara.dylib  libyara.exp  libyara.lib
Samples/SimpleSample/: Program.cs  SimpleSample.csproj
Samples/SimpleSample/Properties/: AssemblyInfo.cs
Samples/YaraInteractive/: CmdHandler.cs  Program.cs  YaraInteractive.csproj
UnitTests/dnYara.UnitTests/: ScanTests.cs  dnYara.UnitTests.csproj
dnYara/: CompiledRules.cs  Compiler.cs  CustomScanner.cs  ErrorUtility.cs  ExternalVariables.cs  Match.cs  ProfilingInfo.cs  Rule.cs  ScanHelper.cs  ScanResult.cs  Scanner.cs  Util.cs  YaraContext.cs  dnYara.csproj
dnYara/Exceptions/: CompilationException.cs  Exceptions.cs  YaraContextNotInitializedException.cs  YaraException.cs
dnYara/Handlers/: GCHandleHandler.cs  PosixFileHandler.cs
libs/cmake/: CMakeLists.txt  README.md  libyara.cmake  yara.cmake  yarac.cmake  yaratest.cmake
